--- a/MeuCurriculo/src/app/Modelos/modelomoderno/moderno/modelomoderno/moderno.component.html
+++ b/MeuCurriculo/src/app/Modelos/modelomoderno/moderno/modelomoderno/moderno.component.html
@@ -1,84 +1,188 @@
-<div class="curriculo-card">
-   <div class="curriculo-header">
-    <h2 class="nome-principal">João da Silva</h2>
-    <div class="info-contato">
-     <div class="info-item">
-      <svg width="20" height="20" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 21V19C20 17.9391 19.5786 16.9217 18.8284 16.1716C18.0783 15.4214 17.0609 15 16 15H8C6.93913 15 5.92172 15.4214 5.17157 16.1716C4.42143 16.9217 4 17.9391 4 19V21" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" /> <circle cx="12" cy="7" r="4" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-      </svg> 28 anos
-     </div>
-     <div class="info-item">
-      <svg width="20" height="20" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4 4H20C21.1 4 22 4.9 22 6V18C22 19.1 21.1 20 20 20H4C2.9 20 2 19.1 2 18V6C2 4.9 2.9 4 4 4Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" /> <path d="M22 6L12 13L2 6" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-      </svg> joao.silvaemail.com
-     </div>
-     <div class="info-item">
-      <svg width="20" height="20" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M22 16.92V19.92C22.0011 20.1985 21.9441 20.4742 21.8325 20.7293C21.7209 20.9845 21.5573 21.2136 21.3521 21.4019C21.1468 21.5901 20.9046 21.7335 20.6407 21.8227C20.3769 21.9119 20.0974 21.9451 19.82 21.92C16.7428 21.5856 13.787 20.5341 11.19 18.85C8.77382 17.3147 6.72533 15.2662 5.18999 12.85C3.49997 10.2412 2.44824 7.27099 2.11999 4.18C2.095 3.90347 2.12787 3.62476 2.21649 3.36162C2.30512 3.09849 2.44756 2.85669 2.63476 2.65162C2.82196 2.44655 3.0498 2.28271 3.30379 2.17052C3.55777 2.05833 3.83233 2.00026 4.10999 2H7.10999C7.5953 1.99522 8.06579 2.16708 8.43376 2.48353C8.80173 2.79999 9.04207 3.23945 9.10999 3.72C9.23662 4.68007 9.47144 5.62273 9.80999 6.53C9.94454 6.88792 9.97366 7.27691 9.8939 7.65088C9.81415 8.02485 9.62886 8.36811 9.35999 8.64L8.08999 9.91C9.51355 12.4135 11.5864 14.4864 14.09 15.91L15.36 14.64C15.6319 14.3711 15.9751 14.1858 16.3491 14.1061C16.7231 14.0263 17.1121 14.0555 17.47 14.19C18.3773 14.5286 19.3199 14.7634 20.28 14.89C20.7658 14.9585 21.2094 15.2032 21.5265 15.5775C21.8437 15.9518 22.0122 16.4296 22 16.92Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-      </svg> (11) 98765-4321
+<main class="container">
+   <div class="curriculo-modelo">
+      
+                                                    <!--CABEÇALHO CURRÍCULO-->
+    <div class="curriculo-cabecalho">
+     <h1 class="curriculo-nome" id="curriculo-nome-completo">João da Silva Santos</h1>
+     <p class="curriculo-idade" id="curriculo-idade">28 anos</p>
+    </div>
+    
+                                                      <!--CORPO CURRÍCULO-->
+
+
+
+
+    <div class="curriculo-corpo">
+      
+                                                       <!--BARRA LATERAL-->
+     <aside class="curriculo-lateral">
+      
+                                                         <!--CONTATOS-->
+      <section>
+       <h2 class="secao-titulo">Contatos</h2>
+       <div class="info-item">
+        <div class="info-label">
+         Telefone
+        </div>
+        <div class="info-valor" id="curriculo-telefone">
+         (11) 98765-4321
+        </div>
+       </div>
+       <div class="info-item">
+        <div class="info-label">
+         E-mail
+        </div>
+        <div class="info-valor" id="curriculo-email">
+         joao.silvaemail.com
+        </div>
+       </div>
+      </section>
+
+
+
+
+                                                       <!--HABILIDADES-->
+      <section style="margin-top: 40px;">
+       <h2 class="secao-titulo">Habilidades</h2>
+
+                                                      <!--HABILIDADE 1-->
+       <div class="habilidade-item">
+        <div class="habilidade-nome" id="curriculo-habilidade-1">
+         Excel
+        </div>
+        <div class="habilidade-nivel-texto" id="curriculo-nivel-1">
+         Avançado
+        </div>
+       </div>
+
+                                                      <!--HABILIDADE 2-->
+       <div class="habilidade-item">
+        <div class="habilidade-nome" id="curriculo-habilidade-2">
+         Excel
+        </div>
+        <div class="habilidade-nivel-texto" id="curriculo-nivel-2">
+         Avançado
+        </div>
+       </div>
+
+                                                      <!--HABILIDADE 3-->
+        <div class="habilidade-item">
+        <div class="habilidade-nome" id="curriculo-habilidade-3">
+         Excel
+        </div>
+        <div class="habilidade-nivel-texto" id="curriculo-nivel-3">
+         Avançado
+        </div>
+       </div>
+
+      </section>
+     </aside>
+     
+     
+     
+     
+                                                         <!--CONTEÚDO PRINCIPAL-->
+     <div class="curriculo-principal">
+      
+      
+      
+      
+      
+                                                        <!--FORMAÇÕES ACADÊMICAS-->
+      <section>
+       <h2 class="secao-titulo">Formação Acadêmica</h2>
+       <div class="formacao-bloco">
+        <div class="experiencia-titulo" id="curriculo-curso-1">
+         Bacharelado em Administração
+        </div>
+        <div class="experiencia-empresa" id="curriculo-instituicao-1">
+         Universidade de São Paulo
+        </div>
+        <div class="experiencia-periodo"><span id="curriculo-periodo-inicio-formacao-1">2015</span> - <span id="curriculo-periodo-fim-formacao-1">2019</span>
+        </div>
+       </div>
+
+          <div class="formacao-bloco">
+        <div class="experiencia-titulo" id="curriculo-curso-2">
+         Bacharelado em Administração
+        </div>
+        <div class="experiencia-empresa" id="curriculo-instituicao-2">
+         Universidade de São Paulo
+        </div>
+        <div class="experiencia-periodo"><span id="curriculo-periodo-inicio-formacao-2">2015</span> - <span id="curriculo-periodo-fim-formacao-2">2019</span>
+        </div>
+       </div>
+
+          <div class="formacao-bloco">
+        <div class="experiencia-titulo" id="curriculo-curso-3">
+         Bacharelado em Administração
+        </div>
+        <div class="experiencia-empresa" id="curriculo-instituicao-3">
+         Universidade de São Paulo
+        </div>
+        <div class="experiencia-periodo"><span id="curriculo-periodo-inicio-formacao-3">2015</span> - <span id="curriculo-periodo-fim-formacao-3">2019</span>
+        </div>
+       </div>
+
+       
+      </section>
+      
+      
+                                                   <!--EXPERIÊNCIAS PROFISSIONAIS-->
+      <section style="margin-top: 40px;">
+       <h2 class="secao-titulo">Experiência Profissional</h2>
+       <div class="experiencia-bloco">
+        <div class="experiencia-titulo" id="curriculo-cargo-1">
+         Analista Administrativo
+        </div>
+        <div class="experiencia-empresa" id="curriculo-empresa-1">
+         Empresa XYZ Ltda
+        </div>
+        <div class="experiencia-periodo"><span id="curriculo-periodo-inicio-1">Jan/2020</span> - <span id="curriculo-periodo-fim-1">Atual</span>
+        </div>
+        <div class="experiencia-descricao" id="curriculo-descricao-1">
+         Responsável pela gestão de processos administrativos, controle de documentos, atendimento a fornecedores e suporte às áreas de compras e financeiro. Implementação de melhorias nos processos internos resultando em redução de 30% no tempo de execução das atividades.
+        </div>
+       </div>
+
+       <div class="experiencia-bloco">
+        <div class="experiencia-titulo" id="curriculo-cargo-2">
+         Analista Administrativo
+        </div>
+        <div class="experiencia-empresa" id="curriculo-empresa-2">
+         Empresa XYZ Ltda
+        </div>
+        <div class="experiencia-periodo"><span id="curriculo-periodo-inicio-2">Jan/2020</span> - <span id="curriculo-periodo-fim-2">Atual</span>
+        </div>
+        <div class="experiencia-descricao" id="curriculo-descricao-2">
+         Responsável pela gestão de processos administrativos, controle de documentos, atendimento a fornecedores e suporte às áreas de compras e financeiro. Implementação de melhorias nos processos internos resultando em redução de 30% no tempo de execução das atividades.
+        </div>
+       </div>
+
+       <div class="experiencia-bloco">
+        <div class="experiencia-titulo" id="curriculo-cargo-3">
+         Analista Administrativo
+        </div>
+        <div class="experiencia-empresa" id="curriculo-empresa-3">
+         Empresa XYZ Ltda
+        </div>
+        <div class="experiencia-periodo"><span id="curriculo-periodo-inicio-3">Jan/2020</span> - <span id="curriculo-periodo-fim-3">Atual</span>
+        </div>
+        <div class="experiencia-descricao" id="curriculo-descricao-3">
+         Responsável pela gestão de processos administrativos, controle de documentos, atendimento a fornecedores e suporte às áreas de compras e financeiro. Implementação de melhorias nos processos internos resultando em redução de 30% no tempo de execução das atividades.
+        </div>
+       </div>
+
+      </section>
+      
+                                                   <!--INFORMAÇÕES ADICIONAIS-->
+      <section style="margin-top: 40px;">
+       <h2 class="secao-titulo">Informações Adicionais</h2>
+       <div class="informacoes-adicionais-texto" id="curriculo-informacoes-adicionais">
+        Certificações: Curso de Excel Avançado (80h), Gestão de Projetos (40h) Idiomas: Inglês intermediário, Espanhol básico Disponibilidade para viagens e mudança de cidade
+       </div>
+      </section>
      </div>
     </div>
    </div>
-   <div class="curriculo-body">
-    <section class="secao-curriculo">
-     <h3 class="secao-titulo">
-      <svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M22 10V15C22 15.5304 21.7893 16.0391 21.4142 16.4142C21.0391 16.7893 20.5304 17 20 17H4C3.46957 17 2.96086 16.7893 2.58579 16.4142C2.21071 16.0391 2 15.5304 2 15V10" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" /> <path d="M22 5H2L12 10L22 5Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-      </svg> Formação Acadêmica</h3>
-     <div class="secao-conteudo">
-      Bacharelado em Ciência da Computação - Universidade Federal de São Paulo (2016-2020) MBA em Gestão de Projetos - FGV (2021-2022)
-     </div>
-    </section>
-    <section class="secao-curriculo">
-     <h3 class="secao-titulo">
-      <svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="2" y="7" width="20" height="14" rx="2" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" /> <path d="M16 21V5C16 4.46957 15.7893 3.96086 15.4142 3.58579C15.0391 3.21071 14.5304 3 14 3H10C9.46957 3 8.96086 3.21071 8.58579 3.58579C8.21071 3.96086 8 4.46957 8 5V21" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-      </svg> Experiência Profissional</h3>
-     <div class="secao-conteudo">
-      Desenvolvedor Full Stack - Tech Solutions (2020-Presente) Desenvolvimento de aplicações web e mobile Liderança de equipe de 5 desenvolvedores Estagiário de TI - Startup Innovation (2019-2020) Suporte técnico e manutenção de sistemas
-     </div>
-    </section>
-    <section class="secao-curriculo">
-     <h3 class="secao-titulo">
-      <svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-      </svg> Habilidades</h3>
-     <div class="habilidades-grid">
-      <div class="habilidade-card">
-       <div class="habilidade-nome">
-        JavaScript
-       </div>
-       <div class="habilidade-nivel">
-        Avançado
-       </div>
-      </div>
-      <div class="habilidade-card">
-       <div class="habilidade-nome">
-        React
-       </div>
-       <div class="habilidade-nivel">
-        Avançado
-       </div>
-      </div>
-      <div class="habilidade-card">
-       <div class="habilidade-nome">
-        Node.js
-       </div>
-       <div class="habilidade-nivel">
-        Intermediário
-       </div>
-      </div>
-      <div class="habilidade-card">
-       <div class="habilidade-nome">
-        Python
-       </div>
-       <div class="habilidade-nivel">
-        Intermediário
-       </div>
-      </div>
-     </div>
-    </section>
-    <section class="secao-curriculo">
-     <h3 class="secao-titulo">
-      <svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" /> <path d="M12 16V12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" /> <path d="M12 8H12.01" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-      </svg> Informações Adicionais</h3>
-     <div class="secao-conteudo">
-      Inglês Fluente Certificação AWS Cloud Practitioner Participação em hackathons e eventos de tecnologia
-     </div>
-    </section>
-   </div>
-  </div>
+  </main>
