--- a/MeuCurriculo/src/app/app.component.html
+++ b/MeuCurriculo/src/app/app.component.html
@@ -2,10 +2,10 @@
 <!--<app-dicas></app-dicas>-->
 <!--<app-escolhermodelo></app-escolhermodelo>-->
 <app-form></app-form>
-<!--<app-moderno></app-moderno>-->
-<!--<app-tech></app-tech>-->
-<!--<app-minimalista></app-minimalista>-->
-<!--<app-executivo></app-executivo>-->
-<!--<app-criativo></app-criativo>-->
-<!--<app-classico></app-classico>-->
+<!--<app-moderno></app-moderno>
+<app-tech></app-tech>
+<app-minimalista></app-minimalista>
+<app-executivo></app-executivo>
+<app-criativo></app-criativo>
+<app-classico></app-classico>-->
 <!--<app-resultado></app-resultado>-->
